<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationLoginFragment"
    android:padding="32dp">

    <TextView
        android:id="@+id/tvTitleRegistrationLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title"
        android:text="@string/registration_login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_login_description"
        style="@style/text"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleRegistrationLogin"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:hint="@string/email"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:hint="@string/password"
        android:singleLine="true"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textError"
        android:text="@string/message_error"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:fontFamily="@font/varela_round"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/custom_button"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>