<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:background="@android:color/white"
    android:elevation="48dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/border_grey"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/infoContainer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                android:text="@string/name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCPF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                android:text="@string/cpf"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                android:text="@string/city"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                android:text="@string/country"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                android:text="@string/email"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                android:text="@string/password"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/infoContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                tools:text="Karen Jully"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoCPF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                tools:text="123.456.789-10"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                tools:text="Ipatinga"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                tools:text="Brasil"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                android:textSize="14dp"
                tools:text="karenjully.kr15@gmail.com"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfoPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textConfirm"
                tools:text="123456"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>