<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmTitle"
        android:layout_marginHorizontal="8dp">
        <include
            android:id="@+id/confirmItem"
            layout="@layout/confirm_item" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/tvConfirmTitle"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="32dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:fontFamily="@font/varela_round"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/custom_button"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:fontFamily="@font/varela_round"
        android:textColor="@color/color_default"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/custom_buttom_second"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="@id/btnConfirm"
        app:layout_constraintStart_toStartOf="@id/btnConfirm"/>

</androidx.constraintlayout.widget.ConstraintLayout>